Minor typos fix

--- a/main.tex
+++ b/main.tex
@@ -22,13 +22,13 @@
 \newcommand{\totalMarks}{60}
 \newcommand{\totalCredits}{3.0}
 \newcommand{\examDuration}{3~Hours}
-\newcommand{\examDate}{October~09,~2025~--~14:30} % Exam date or the questing writing date
+\newcommand{\examDate}{October~09,~2025~--~14:30} % Exam date and time or the questing writing date and time
 \newcommand{\specialInstruction}{Answer \textbf{all} the questions.}
 
 
 
-\newcommand{\teacherName}{Your Name}
-\newcommand{\teacherUniqueID}{Teacher ID card number}
+\newcommand{\teacherName}{Md Rasedujjaman}
+\newcommand{\teacherUniqueID}{N07R28S33}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
