--- a/questionFiles/Q2.tex
+++ b/questionFiles/Q2.tex
@@ -31,7 +31,7 @@
 
 \end{solution}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%	
-\part[5] \color{red}If you want to insert a Figure(pdf, png, etc) then you can use the \verb|\includegraphics{nameOfFigure}| command as shown below. : \color{black}Find the rms value of the current waveform of Fig.\ref{fig:currentWaveform}. If the current flows through a \SI{9}{\ohm} resistor, calculate the average power absorbed by the resistor. 
+\part[5] \color{red}Figure(pdf, png, etc) can be inserted using the \verb|\includegraphics{nameOfFigure}| command as shown below. : \color{black}Find the rms value of the current waveform of Fig.\ref{fig:currentWaveform}. If the current flows through a \SI{9}{\ohm} resistor, calculate the average power absorbed by the resistor. 
 
 
 		\begin{figure}[H]
