package for calculating last page number: added

--- a/setupFiles/final_exam_sust.cls
+++ b/setupFiles/final_exam_sust.cls
@@ -34,7 +34,7 @@
 \RequirePackage{listings} %For code in appendix
 \RequirePackage{xfrac}
 \RequirePackage{physics}
-	
+\RequirePackage{lastpage}	
 \RequirePackage[euler]{textgreek}
 \RequirePackage{pgfplots}
 \RequirePackage{xstring}
