--- a/setupFiles/examHeader.tex
+++ b/setupFiles/examHeader.tex
@@ -29,6 +29,6 @@
 %% The instruction
 \begin{center}
 \vspace{-2.0mm}
-\textit{[\specialInstruction{}~The figures in the right margin indicate full marks]}
+\textit{[\specialInstruction{}~The figure in the right margin indicates full marks]}
 \end{center}
 \vspace{2mm}
